src/test/deca/context/invalid/sansObj/readfloat-int.deca
// Description:
//          Affectation d'un readFloat() à un int
//
// Résultat:
//right value float expected int
{
    int a;
    a = readFloat();
}
